--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="static/js/script.js"></script>
+    <script src="static/js/main.js"></script>
 
     <!-- Script para abrir modal do Prontuário -->
     <script>
