--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <meta property="og:url" content="https://capalbo1.github.io/ProjetoCyroLongevita/">
     <meta property="og:title" content="Longevitá | Cuidado Especializado para Idosos em Tatuí-SP">
     <meta property="og:description" content="Há mais de 20 anos cuidando da saúde e conectando gerações. Residencial Sênior, Centro Dia 60+ e Homecare.">
-    <meta property="og:image" content="https://capalbo1.github.io/ProjetoCyroLongevita/static/images/logo1.png">
+    <meta property="og:image" content="https://capalbo1.github.io/ProjetoCyroLongevita/static/imagens/logo1.png">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Longevitá | Cuidado Especializado para Idosos">
     <meta name="twitter:description" content="Há mais de 20 anos cuidando da saúde e conectando gerações em Tatuí-SP.">
-    <meta name="twitter:image" content="https://capalbo1.github.io/ProjetoCyroLongevita/static/images/logo1.png">
+    <meta name="twitter:image" content="https://capalbo1.github.io/ProjetoCyroLongevita/static/imagens/logo1.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="static/images/favicon.png">
-    <link rel="apple-touch-icon" href="static/images/favicon.png">
+    <link rel="icon" type="image/png" href="static/imagens/favicon.png">
+    <link rel="apple-touch-icon" href="static/imagens/favicon.png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +47,7 @@
     <header class="header">
         <div class="header-container">
             <div class="logo-area">
-                <img src="static/images/logo1.png" alt="Longevitá Logo" class="logo">
+                <img src="static/imagens/logo1.png" alt="Longevitá Logo" class="logo">
                 <span class="titulo-clinica">Longevitá</span>
             </div>
             <nav class="menu">
@@ -89,7 +89,7 @@
         <div class="container">
             <h2>Quem Somos</h2>
             <div class="quem-somos-content">
-                <img src="static/images/logo1.png" alt="Longevitá" class="logo-grande">
+                <img src="static/imagens/logo1.png" alt="Longevitá" class="logo-grande">
                 <p>A <strong>Longevitá</strong> nasceu da missão de proporcionar cuidados especializados e atenção humanizada para pessoas em diferentes estágios do envelhecimento.</p>
                 <p>Com <strong>mais de 20 anos de experiência</strong>, oferecemos três modalidades de atendimento adaptadas às necessidades de cada família: <strong>Residencial Sênior</strong>, <strong>Centro Dia 60+</strong> e <strong>Homecare</strong>.</p>
                 <p>Nossa equipe multidisciplinar trabalha com dedicação, empatia e profissionalismo para garantir bem-estar, segurança e qualidade de vida aos nossos assistidos.</p>
