--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- ============================================================
          QUEM SOMOS
     ============================================================ -->
-    <section id="quem-somos" class="quem-somos fundo-branco animar">
+    <section id="quem-somos" class="quem-somos fundo2 animar">
         <div class="container">
             <h2>Quem Somos</h2>
             <div class="quem-somos-content">
@@ -114,7 +114,7 @@
     <!-- ============================================================
          SERVIÇOS
     ============================================================ -->
-    <section id="servicos" class="servicos fundo2 animar">
+    <section id="servicos" class="servicos fundo1 animar">
         <div class="container">
             <h2>Nossos Serviços</h2>
             <p class="subtitulo">Cuidado especializado em três modalidades</p>
@@ -168,7 +168,7 @@
     <!-- ============================================================
          ATIVIDADES / DESTAQUES
     ============================================================ -->
-    <section id="atividades" class="atividades fundo-branco animar">
+    <section id="atividades" class="atividades fundo2 animar">
         <div class="container">
             <h2>Destaques & Atividades</h2>
             <p class="subtitulo">Promovendo saúde, bem-estar e qualidade de vida</p>
@@ -216,15 +216,16 @@
     <!-- ============================================================
          PROFISSIONAIS
     ============================================================ -->
-    <section id="profissionais" class="profissionais fundo2 animar">
+    <section id="profissionais" class="profissionais fundo1 animar">
         <div class="container">
             <h2>Nossa Equipe</h2>
             <p class="subtitulo">Profissionais dedicados ao cuidado humanizado</p>
 
             <div class="profissionais-grid">
+                <!-- Dr. Cyro -->
                 <div class="profissional-card">
                     <div class="profissional-foto">
-                        <i class="fas fa-user-md"></i>
+                        <img src="static/imagens/foto1.jpeg" alt="Dr. Cyro">
                     </div>
                     <h3>Dr. Cyro</h3>
                     <p class="cargo">Coordenador Clínico</p>
@@ -238,25 +239,10 @@
                     <p>Médico especialista com vasta experiência em geriatria e medicina preventiva. Coordena todas as atividades clínicas da Longevitá com foco no bem-estar integral dos assistidos.</p>
                 </div>
 
+                <!-- Dr. Thiago -->
                 <div class="profissional-card">
                     <div class="profissional-foto">
-                        <i class="fas fa-laptop-code"></i>
-                    </div>
-                    <h3>Gustavo</h3>
-                    <p class="cargo">Desenvolvedor de Sistemas</p>
-                    <div class="estrelas">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <p>Responsável pelo desenvolvimento do Prontuário Longevitá e sistemas de gestão que otimizam o atendimento e comunicação com familiares através de tecnologia.</p>
-                </div>
-
-                <div class="profissional-card">
-                    <div class="profissional-foto">
-                        <i class="fas fa-user-doctor"></i>
+                        <img src="static/imagens/foto2.jpeg" alt="Dr. Thiago">
                     </div>
                     <h3>Dr. Thiago</h3>
                     <p class="cargo">Cirurgião</p>
@@ -269,6 +255,23 @@
                     </div>
                     <p>Cirurgião especializado em procedimentos geriátricos. Atua em casos que necessitam de intervenções cirúrgicas com cuidado, precisão e humanização.</p>
                 </div>
+
+                <!-- CRV Soluções em TI -->
+                <div class="profissional-card">
+                    <div class="profissional-foto">
+                        <img src="static/imagens/foto3.png" alt="CRV Soluções em TI">
+                    </div>
+                    <h3>CRV Soluções em TI</h3>
+                    <p class="cargo">Desenvolvimento de Sistemas</p>
+                    <div class="estrelas">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>Empresa especializada em desenvolvimento de soluções tecnológicas para gestão e otimização. Responsável pelo Prontuário Longevitá e sistemas de comunicação automatizada.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -276,7 +279,7 @@
     <!-- ============================================================
          LOCALIZAÇÃO
     ============================================================ -->
-    <section id="localizacao" class="localizacao fundo-branco animar">
+    <section id="localizacao" class="localizacao fundo2 animar">
         <div class="container">
             <h2>Nossas Unidades</h2>
             <p class="subtitulo">3 espaços adaptados em Tatuí-SP</p>
@@ -306,7 +309,7 @@
     <!-- ============================================================
          CONTATO
     ============================================================ -->
-    <section id="contato" class="contato fundo2 animar">
+    <section id="contato" class="contato fundo1 animar">
         <div class="container">
             <h2>Entre em Contato</h2>
             <p class="contato-texto">Agende uma visita, tire suas dúvidas ou solicite mais informações. Nossa equipe está pronta para atender você!</p>
@@ -391,7 +394,7 @@
                 <i class="fab fa-whatsapp fa-2x"></i>
             </a>
         </div>
-        <p>&copy; 2026 Longevitá - Todos os direitos reservados | Desenvolvido por <strong>CRV Soluções em TI</strong></p>
+        <p>&copy; 2026 Longevitá - Todos os direitos reservados | Desenvolvido por <a href="https://crvsolucoesti.com" target="_blank">CRV Soluções em TI</a></p>
     </footer>
 
     <!-- ============================================================
