--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 <img src="static/imagens/logo1.png" alt="Longevitá Logo" class="logo">
                 <span class="titulo-clinica">Longevitá</span>
             </div>
+            <button class="menu-toggle" aria-label="Menu">
+                <i class="fas fa-bars"></i>
+            </button>
             <nav class="menu">
                 <a href="#inicio">Home</a>
                 <a href="#quem-somos">Quem Somos</a>
