--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header class="header">
         <div class="header-container">
             <div class="logo-area">
-                <img src="static/imagens/logo1.png" alt="Logo Longevitá" class="logo">
+                <img src="static/imagens/logo2.png" alt="Logo Longevitá" class="logo">
                 <h1 class="titulo-clinica">LONGEVITÁ</h1>
             </div>
 
@@ -81,7 +81,7 @@
             <p class="subtitulo">Acolhimento, respeito e profissionalismo em cada etapa do envelhecimento</p>
 
             <div class="quem-somos-content">
-                <img src="static/imagens/logo1.png" alt="Logo Longevitá" class="logo-grande">
+                <img src="static/imagens/logo2.png" alt="Logo Longevitá" class="logo-grande">
 
                 <p>O Longevitá é um espaço dedicado ao cuidado integral da pessoa idosa, criado para acolher com respeito, segurança e afeto cada etapa do envelhecimento. Atuamos em duas frentes complementares: o <strong>Longevitá Residencial Sênior</strong> e o <strong>Longevitá Centro Dia 60+</strong>, oferecendo soluções que se adaptam às diferentes necessidades dos idosos e de suas famílias.</p>
 
@@ -166,7 +166,7 @@
     </section>
 
     <!-- ============================================================
-         DESTAQUES & ATIVIDADES (CARROSSEL INFINITO)
+         DESTAQUES & ATIVIDADES (CARROSSEL INFINITO COM FOTOS)
     ============================================================ -->
     <section id="destaques" class="atividades fundo2">
         <div class="container animar">
@@ -180,8 +180,11 @@
 
                 <div class="carrossel-container">
                     <div class="carrossel-track">
-                        <!-- Atividade 1 -->
+                        <!-- Atividade 1 - Artesanato -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgartesanato.jpg" alt="Artesanato">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-palette"></i>
                             </div>
@@ -189,8 +192,11 @@
                             <p>Criação manual como experiência de foco, satisfação e conexão com o fazer.</p>
                         </div>
 
-                        <!-- Atividade 2 -->
+                        <!-- Atividade 2 - Arteterapia -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgarteterapia.jpg" alt="Arteterapia">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-paint-brush"></i>
                             </div>
@@ -198,8 +204,11 @@
                             <p>Processos terapêuticos que utilizam a arte como caminho para equilíbrio emocional e significado.</p>
                         </div>
 
-                        <!-- Atividade 3 -->
+                        <!-- Atividade 3 - Atividade Física -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgedfisicadanca.jpg" alt="Atividade Física">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-dumbbell"></i>
                             </div>
@@ -207,8 +216,11 @@
                             <p>Programas personalizados que sustentam vitalidade, funcionalidade e longevidade ativa.</p>
                         </div>
 
-                        <!-- Atividade 4 -->
+                        <!-- Atividade 4 - Bingo -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgartesanato.jpg" alt="Bingo">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-circle-dot"></i>
                             </div>
@@ -216,8 +228,11 @@
                             <p>Momentos de convivência cuidadosamente conduzidos, unindo estímulo cognitivo e prazer social.</p>
                         </div>
 
-                        <!-- Atividade 5 -->
+                        <!-- Atividade 5 - Dança -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgedfisicadanca.jpg" alt="Dança">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-music"></i>
                             </div>
@@ -225,8 +240,11 @@
                             <p>Expressão refinada do movimento, promovendo leveza, prazer e bem-estar integral.</p>
                         </div>
 
-                        <!-- Atividade 6 -->
+                        <!-- Atividade 6 - Fisioterapia -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgterapiaocupacional.jpg" alt="Fisioterapia">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-person-walking"></i>
                             </div>
@@ -234,8 +252,11 @@
                             <p>Cuidado clínico de excelência, voltado à preservação da mobilidade, do conforto e da autonomia.</p>
                         </div>
 
-                        <!-- Atividade 7 -->
+                        <!-- Atividade 7 - Musicoterapia -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgarteterapia.jpg" alt="Musicoterapia">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-guitar"></i>
                             </div>
@@ -243,8 +264,11 @@
                             <p>A música como linguagem terapêutica para acessar memórias, emoções e vínculos afetivos.</p>
                         </div>
 
-                        <!-- Atividade 8 -->
+                        <!-- Atividade 8 - Oficina da Memória -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgpsicologia.jpg" alt="Oficina da Memória">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-brain"></i>
                             </div>
@@ -252,8 +276,11 @@
                             <p>Estímulos cognitivos estruturados para preservar funções mentais e autonomia.</p>
                         </div>
 
-                        <!-- Atividade 9 -->
+                        <!-- Atividade 9 - Oficina de Culinária -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgartesanato.jpg" alt="Oficina de Culinária">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-utensils"></i>
                             </div>
@@ -261,8 +288,11 @@
                             <p>Experiências sensoriais que resgatam memórias, sabores e o prazer de compartilhar.</p>
                         </div>
 
-                        <!-- Atividade 10 -->
+                        <!-- Atividade 10 - Pintura -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgpinturatecido.jpg" alt="Pintura">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-image"></i>
                             </div>
@@ -270,8 +300,11 @@
                             <p>Vivências artísticas que estimulam a sensibilidade, a cognição e a expressão pessoal.</p>
                         </div>
 
-                        <!-- Atividade 11 -->
+                        <!-- Atividade 11 - Pilates -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgpilates.jpg" alt="Pilates">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-spa"></i>
                             </div>
@@ -279,8 +312,11 @@
                             <p>Movimento consciente e preciso, com acompanhamento individualizado e atenção absoluta ao corpo.</p>
                         </div>
 
-                        <!-- Atividade 12 -->
+                        <!-- Atividade 12 - Psicologia -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgpsicologia.jpg" alt="Psicologia">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-comments"></i>
                             </div>
@@ -288,8 +324,11 @@
                             <p>Vivências terapêuticas em grupo, conduzidas com escuta qualificada, promovendo reflexão, vínculo e bem-estar emocional.</p>
                         </div>
 
-                        <!-- Atividade 13 -->
+                        <!-- Atividade 13 - Terapia Ocupacional -->
                         <div class="atividade-card">
+                            <div class="atividade-img">
+                                <img src="static/imagens/imgterapiaocupacional.jpg" alt="Terapia Ocupacional">
+                            </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-hands-helping"></i>
                             </div>
@@ -400,87 +439,124 @@
                 </div>
             </div>
 
-            <!-- EQUIPE MULTIDISCIPLINAR -->
+            <!-- EQUIPE MULTIDISCIPLINAR COM FOTOS EM HOVER -->
             <h3 style="text-align: center; margin: 80px 0 40px; font-size: 2rem; color: var(--marrom);">Equipe Multidisciplinar</h3>
 
             <div class="equipe-multi-grid">
-                <div class="multi-item" data-atividade="arteterapia">
-                    <i class="fas fa-paint-brush"></i>
-                    <div>
-                        <h4>Neiva</h4>
-                        <p>Arteterapia</p>
+                <!-- Neiva - Arteterapia -->
+                <div class="multi-item">
+                    <div class="multi-foto">
+                        <img src="static/imagens/imgarteterapia.jpg" alt="Arteterapia">
+                    </div>
+                    <div class="multi-info">
+                        <i class="fas fa-paint-brush"></i>
+                        <div>
+                            <h4>Neiva</h4>
+                            <p>Arteterapia</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="multi-item" data-atividade="artesanato">
-                    <i class="fas fa-palette"></i>
-                    <div>
-                        <h4>Denise</h4>
-                        <p>Artesanato</p>
+                <!-- Denise - Artesanato -->
+                <div class="multi-item">
+                    <div class="multi-foto">
+                        <img src="static/imagens/imgartesanato.jpg" alt="Artesanato">
+                    </div>
+                    <div class="multi-info">
+                        <i class="fas fa-palette"></i>
+                        <div>
+                            <h4>Denise</h4>
+                            <p>Artesanato</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="multi-item" data-atividade="psicologia">
-                    <i class="fas fa-comments"></i>
-                    <div>
-                        <h4>Luciana Antulini</h4>
-                        <p>Psicologia</p>
+                <!-- Luciana Antulini - Psicologia -->
+                <div class="multi-item">
+                    <div class="multi-foto">
+                        <img src="static/imagens/imgpsicologia.jpg" alt="Psicologia">
+                    </div>
+                    <div class="multi-info">
+                        <i class="fas fa-comments"></i>
+                        <div>
+                            <h4>Luciana Antulini</h4>
+                            <p>Psicologia</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="multi-item" data-atividade="educacao-fisica">
-                    <i class="fas fa-dumbbell"></i>
-                    <div>
-                        <h4>Ana Cristina</h4>
-                        <p>Educação Física e Dança</p>
+                <!-- Ana Cristina - Educação Física e Dança -->
+                <div class="multi-item">
+                    <div class="multi-foto">
+                        <img src="static/imagens/imgedfisicadanca.jpg" alt="Educação Física e Dança">
+                    </div>
+                    <div class="multi-info">
+                        <i class="fas fa-dumbbell"></i>
+                        <div>
+                            <h4>Ana Cristina</h4>
+                            <p>Educação Física e Dança</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="multi-item" data-atividade="pintura">
-                    <i class="fas fa-image"></i>
-                    <div>
-                        <h4>Roseli</h4>
-                        <p>Pintura em Tecido</p>
+                <!-- Roseli - Pintura em Tecido -->
+                <div class="multi-item">
+                    <div class="multi-foto">
+                        <img src="static/imagens/imgpinturatecido.jpg" alt="Pintura em Tecido">
+                    </div>
+                    <div class="multi-info">
+                        <i class="fas fa-image"></i>
+                        <div>
+                            <h4>Roseli</h4>
+                            <p>Pintura em Tecido</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="multi-item" data-atividade="terapia-ocupacional">
-                    <i class="fas fa-hands-helping"></i>
-                    <div>
-                        <h4>Fernanda Florencio</h4>
-                        <p>Terapia Ocupacional</p>
+                <!-- Fernanda Florencio - Terapia Ocupacional -->
+                <div class="multi-item">
+                    <div class="multi-foto">
+                        <img src="static/imagens/imgterapiaocupacional.jpg" alt="Terapia Ocupacional">
+                    </div>
+                    <div class="multi-info">
+                        <i class="fas fa-hands-helping"></i>
+                        <div>
+                            <h4>Fernanda Florencio</h4>
+                            <p>Terapia Ocupacional</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="multi-item" data-atividade="pilates">
-                    <i class="fas fa-spa"></i>
-                    <div>
-                        <h4>Mariane</h4>
-                        <p>Pilates</p>
+                <!-- Mariane - Pilates -->
+                <div class="multi-item">
+                    <div class="multi-foto">
+                        <img src="static/imagens/imgpilates.jpg" alt="Pilates">
+                    </div>
+                    <div class="multi-info">
+                        <i class="fas fa-spa"></i>
+                        <div>
+                            <h4>Mariane</h4>
+                            <p>Pilates</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="multi-item" data-atividade="danca">
-                    <i class="fas fa-music"></i>
-                    <div>
-                        <h4>Gustavo Vaz</h4>
-                        <p>Dança</p>
+                <!-- Gustavo Vaz - Dança -->
+                <div class="multi-item">
+                    <div class="multi-foto">
+                        <img src="static/imagens/imgedfisicadanca.jpg" alt="Dança">
+                    </div>
+                    <div class="multi-info">
+                        <i class="fas fa-music"></i>
+                        <div>
+                            <h4>Gustavo Vaz</h4>
+                            <p>Dança</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- Modal para fotos de atividades -->
-    <div id="modal-atividade" class="modal-atividade">
-        <div class="modal-atividade-content">
-            <button class="modal-close" aria-label="Fechar">
-                <i class="fas fa-times"></i>
-            </button>
-            <img id="modal-atividade-img" src="" alt="Atividade">
-            <p id="modal-atividade-titulo"></p>
-        </div>
-    </div>
 
     <!-- ============================================================
          NOSSO ESPAÇO (NOVA SEÇÃO)
