--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <div class="header-container">
             <div class="logo-area">
                 <img src="static/imagens/logo2.png" alt="Logo Longevitá" class="logo">
-                <h1 class="titulo-clinica">LONGEVITÁ</h1>
             </div>
 
             <nav class="menu">
@@ -183,7 +182,7 @@
                         <!-- Atividade 1 - Artesanato -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgartesanato.jpg" alt="Artesanato">
+                                <img src="static/imagens/imgartesanato.png" alt="Artesanato">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-palette"></i>
@@ -195,7 +194,7 @@
                         <!-- Atividade 2 - Arteterapia -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgarteterapia.jpg" alt="Arteterapia">
+                                <img src="static/imagens/imgarteterapia.png" alt="Arteterapia">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-paint-brush"></i>
@@ -207,7 +206,7 @@
                         <!-- Atividade 3 - Atividade Física -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgedfisicadanca.jpg" alt="Atividade Física">
+                                <img src="static/imagens/imgedfisicadanca.png" alt="Atividade Física">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-dumbbell"></i>
@@ -219,7 +218,7 @@
                         <!-- Atividade 4 - Bingo -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgartesanato.jpg" alt="Bingo">
+                                <img src="static/imagens/imgartesanato.png" alt="Bingo">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-circle-dot"></i>
@@ -231,7 +230,7 @@
                         <!-- Atividade 5 - Dança -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgedfisicadanca.jpg" alt="Dança">
+                                <img src="static/imagens/imgedfisicadanca.png" alt="Dança">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-music"></i>
@@ -243,7 +242,7 @@
                         <!-- Atividade 6 - Fisioterapia -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgterapiaocupacional.jpg" alt="Fisioterapia">
+                                <img src="static/imagens/imgterapiaocupacional.png" alt="Fisioterapia">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-person-walking"></i>
@@ -255,7 +254,7 @@
                         <!-- Atividade 7 - Musicoterapia -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgarteterapia.jpg" alt="Musicoterapia">
+                                <img src="static/imagens/imgarteterapia.png" alt="Musicoterapia">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-guitar"></i>
@@ -267,7 +266,7 @@
                         <!-- Atividade 8 - Oficina da Memória -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgpsicologia.jpg" alt="Oficina da Memória">
+                                <img src="static/imagens/imgpsicologia.png" alt="Oficina da Memória">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-brain"></i>
@@ -279,7 +278,7 @@
                         <!-- Atividade 9 - Oficina de Culinária -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgartesanato.jpg" alt="Oficina de Culinária">
+                                <img src="static/imagens/imgartesanato.png" alt="Oficina de Culinária">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-utensils"></i>
@@ -291,7 +290,7 @@
                         <!-- Atividade 10 - Pintura -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgpinturatecido.jpg" alt="Pintura">
+                                <img src="static/imagens/imgpinturatecido.png" alt="Pintura">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-image"></i>
@@ -303,7 +302,7 @@
                         <!-- Atividade 11 - Pilates -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgpilates.jpg" alt="Pilates">
+                                <img src="static/imagens/imgpilates.png" alt="Pilates">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-spa"></i>
@@ -315,7 +314,7 @@
                         <!-- Atividade 12 - Psicologia -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgpsicologia.jpg" alt="Psicologia">
+                                <img src="static/imagens/imgpsicologia.png" alt="Psicologia">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-comments"></i>
@@ -327,7 +326,7 @@
                         <!-- Atividade 13 - Terapia Ocupacional -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgterapiaocupacional.jpg" alt="Terapia Ocupacional">
+                                <img src="static/imagens/imgterapiaocupacional.png" alt="Terapia Ocupacional">
                             </div>
                             <div class="icon-atividade">
                                 <i class="fas fa-hands-helping"></i>
