--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                 <!-- Neiva - Arteterapia -->
                 <div class="multi-item">
                     <div class="multi-foto">
-                        <img src="static/imagens/imgarteterapia.jpg" alt="Arteterapia">
+                        <img src="static/imagens/imgarteterapia.png" alt="Arteterapia">
                     </div>
                     <div class="multi-info">
                         <i class="fas fa-paint-brush"></i>
@@ -459,7 +459,7 @@
                 <!-- Denise - Artesanato -->
                 <div class="multi-item">
                     <div class="multi-foto">
-                        <img src="static/imagens/imgartesanato.jpg" alt="Artesanato">
+                        <img src="static/imagens/imgartesanato.png" alt="Artesanato">
                     </div>
                     <div class="multi-info">
                         <i class="fas fa-palette"></i>
@@ -473,7 +473,7 @@
                 <!-- Luciana Antulini - Psicologia -->
                 <div class="multi-item">
                     <div class="multi-foto">
-                        <img src="static/imagens/imgpsicologia.jpg" alt="Psicologia">
+                        <img src="static/imagens/imgpsicologia.png" alt="Psicologia">
                     </div>
                     <div class="multi-info">
                         <i class="fas fa-comments"></i>
@@ -487,7 +487,7 @@
                 <!-- Ana Cristina - Educação Física e Dança -->
                 <div class="multi-item">
                     <div class="multi-foto">
-                        <img src="static/imagens/imgedfisicadanca.jpg" alt="Educação Física e Dança">
+                        <img src="static/imagens/imgedfisicadanca.png" alt="Educação Física e Dança">
                     </div>
                     <div class="multi-info">
                         <i class="fas fa-dumbbell"></i>
@@ -501,7 +501,7 @@
                 <!-- Roseli - Pintura em Tecido -->
                 <div class="multi-item">
                     <div class="multi-foto">
-                        <img src="static/imagens/imgpinturatecido.jpg" alt="Pintura em Tecido">
+                        <img src="static/imagens/imgpinturatecido.png" alt="Pintura em Tecido">
                     </div>
                     <div class="multi-info">
                         <i class="fas fa-image"></i>
@@ -515,7 +515,7 @@
                 <!-- Fernanda Florencio - Terapia Ocupacional -->
                 <div class="multi-item">
                     <div class="multi-foto">
-                        <img src="static/imagens/imgterapiaocupacional.jpg" alt="Terapia Ocupacional">
+                        <img src="static/imagens/imgterapiaocupacional.png" alt="Terapia Ocupacional">
                     </div>
                     <div class="multi-info">
                         <i class="fas fa-hands-helping"></i>
@@ -529,7 +529,7 @@
                 <!-- Mariane - Pilates -->
                 <div class="multi-item">
                     <div class="multi-foto">
-                        <img src="static/imagens/imgpilates.jpg" alt="Pilates">
+                        <img src="static/imagens/imgpilates.png" alt="Pilates">
                     </div>
                     <div class="multi-info">
                         <i class="fas fa-spa"></i>
@@ -543,7 +543,7 @@
                 <!-- Gustavo Vaz - Dança -->
                 <div class="multi-item">
                     <div class="multi-foto">
-                        <img src="static/imagens/imgedfisicadanca.jpg" alt="Dança">
+                        <img src="static/imagens/imgedfisicadanca.png" alt="Dança">
                     </div>
                     <div class="multi-info">
                         <i class="fas fa-music"></i>
