--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
             </a>
         </div>
         <p>&copy; 2026 Longevitá - Todos os direitos reservados</p>
-        <p>Desenvolvido por <a href="https://crvsolucoes.com" target="_blank">CRV Soluções em TI</a></p>
+        <p>Desenvolvido por <a href="https://crvsolucoesti.com" target="_blank">CRV Soluções em TI</a></p>
     </footer>
 
     <!-- ============================================================
