up imgbingo png para jpg

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         <!-- Atividade 4 - Bingo -->
                         <div class="atividade-card">
                             <div class="atividade-img">
-                                <img src="static/imagens/imgbingo.png" alt="Bingo">
+                                <img src="static/imagens/imgbingo.jpg" alt="Bingo">
                             </div>
                             <div class="atividade-info">
                                 <div class="icon-atividade">
